@@ -28,17 +28,6 @@
  */
 package de.escidoc.core.common.util.stax.handler;
 
-import java.io.ByteArrayOutputStream;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Vector;
-
-import javax.naming.directory.NoSuchAttributeException;
-import javax.xml.stream.XMLStreamException;
-import javax.xml.stream.XMLStreamWriter;
-
 import de.escidoc.core.common.business.Constants;
 import de.escidoc.core.common.util.stax.StaxParser;
 import de.escidoc.core.common.util.xml.XmlUtility;
@@ -48,6 +37,16 @@ import de.escidoc.core.common.util.xml.stax.events.StartElement;
 import de.escidoc.core.common.util.xml.stax.events.StartElementWithChildElements;
 import de.escidoc.core.common.util.xml.stax.events.StartElementWithText;
 import de.escidoc.core.common.util.xml.stax.handler.DefaultHandler;
+
+import javax.naming.directory.NoSuchAttributeException;
+import javax.xml.stream.XMLStreamException;
+import javax.xml.stream.XMLStreamWriter;
+import java.io.ByteArrayOutputStream;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Vector;
 
 /**
  * This handler must be the last in the chain! Adds a new sub-tree to the data
@@ -360,7 +359,7 @@ public class AddNewSubTreesToDatastream extends DefaultHandler {
         if ((uri) != null) {
             if (!nsuris.containsKey(uri)) {
                 Vector namespaceTrace = new Vector();
-                namespaceTrace.add(new Integer(deep));
+                namespaceTrace.add(Integer.valueOf(deep));
                 namespaceTrace.add(name);
                 namespaceTrace.add(prefix);
                 nsuris.put(uri, namespaceTrace);
@@ -407,7 +406,7 @@ public class AddNewSubTreesToDatastream extends DefaultHandler {
         if (uri != null) {
             if (!nsuris.containsKey(uri)) {
                 Vector namespaceTrace = new Vector();
-                namespaceTrace.add(new Integer(deep));
+                namespaceTrace.add(Integer.valueOf(deep));
                 namespaceTrace.add(elementName);
                 namespaceTrace.add(prefix);
                 nsuris.put(uri, namespaceTrace);
